<resources>
    <string name="app_name">KekodSwitchApp</string>
    <string name="happinness">Happiness</string>
    <string name="optimism">Optimism</string>
    <string name="kidness">Kidness</string>
    <string name="giving">Giving</string>
    <string name="Respect">Respect</string>
    <string name="ego">Ego</string>
    <string name="quotes">Alıntılar</string>
    <string name="statictic">İstatistik</string>
    <string name="description">Açıklama</string>
</resources>